--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+	<script src="js/jobs.service.js"></script>
   </head>
 
   <body ng-app="starter">
